Fix z-index bug

--- a/client/styles/_popups.scss
+++ b/client/styles/_popups.scss
@@ -1,6 +1,7 @@
 .popup {
   position: fixed;
   inset: 0;
+  z-index: 1;
 
   // positions
   &-center {
